Updated files AirplaneDJ and git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -350,5 +350,9 @@ poetry.toml
 
 # LSP config files
 pyrightconfig.json
+baza.py
+huyna_2_povernenya.py
+huyna.py
 
+airport/
 # End of https://www.toptal.com/developers/gitignore/api/django,python,pycharm+all
