--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,8 @@ DB_USER=
 DB_HOST=
 DB_PORT=
 GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+GOOGLE_TOKEN_URL=
+GOOGLE_AUTHORIZATION_URL=
+GOOGLE_USERINFO_URL=
