Add stripe_payment logic, using a stripe service on ngrok channel, updated an Order logic and also added a Payment class in airport.models

--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,7 @@ GOOGLE_REDIRECT_URI=
 GOOGLE_TOKEN_URL=
 GOOGLE_AUTHORIZATION_URL=
 GOOGLE_USERINFO_URL=
+
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
