--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,22 @@ DB_NAME=
 DB_USER=
 DB_HOST=
 DB_PORT=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+GOOGLE_TOKEN_URL=
+GOOGLE_AUTHORIZATION_URL=
+GOOGLE_USERINFO_URL=
+
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
+
+# Email Configuration (for verification codes)
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+DEFAULT_FROM_EMAIL=noreply@airplanedj.com
