--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ db.sqlite3
 db.sqlite3-journal
 media
 
+
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
@@ -37,6 +38,7 @@ parts/
 sdist/
 var/
 wheels/
+model/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
