--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 Django==5.1.7
 djangorestframework==3.16.0
 djangorestframework-simplejwt==5.5.1
+channels==4.1.0
+channels-redis==4.2.0
+daphne==4.1.2
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 stripe==13.0.0
