ADDED A GITLAB CI for ci/cd infrastructure

--- a/.env.sample
+++ b/.env.sample
@@ -1,22 +1,26 @@
-SECRET_KEY=
-#BAZA
-DB_PASSWORD=
-DB_NAME=
-DB_USER=
-DB_HOST=
-DB_PORT=
+SECRET_KEY=django-insecure-docker-dev-key-change-in-production-12345
+
+# DATABASE
+DB_NAME=airportdb
+DB_USER=airportuser
+DB_PASSWORD=airportpass123
+DB_HOST=db
+DB_PORT=5432
+
+# GOOGLE AUTH
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=
-GOOGLE_TOKEN_URL=
-GOOGLE_AUTHORIZATION_URL=
-GOOGLE_USERINFO_URL=
+GOOGLE_REDIRECT_URI=http://localhost:8001/api/auth/google/callback/
+GOOGLE_TOKEN_URL=https://oauth2.googleapis.com/token
+GOOGLE_AUTHORIZATION_URL=https://accounts.google.com/o/oauth2/v2/auth
+GOOGLE_USERINFO_URL=https://www.googleapis.com/oauth2/v2/userinfo
 
-STRIPE_SECRET_KEY=
-STRIPE_PUBLISHABLE_KEY=
-STRIPE_WEBHOOK_SECRET=
+# STRIPE
+STRIPE_SECRET_KEY=sk_test_placeholder
+STRIPE_PUBLISHABLE_KEY=pk_test_placeholder
+STRIPE_WEBHOOK_SECRET=whsec_placeholder
 
-# Email Configuration (for verification codes)
+# EMAIL CONFIGURATION
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
@@ -24,3 +28,16 @@ EMAIL_USE_TLS=True
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 DEFAULT_FROM_EMAIL=noreply@airplanedj.com
+
+# LLAMA / LOCAL MODEL SETTINGS
+LLAMA_MODEL_PATH=
+LLAMA_MODEL_TYPE=
+LLAMA_API_BASE=
+LLAMA_API_KEY=
+LLAMA_MODEL_NAME=
+LLAMA_MAX_TOKENS=
+LLAMA_TEMPERATURE=
+LLAMA_TOP_K=
+LLAMA_TOP_P=
+LLAMA_THREADS=
+LLAMA_CONTEXT_LENGTH=
