--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,8 @@ gunicorn==23.0.0
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
+channels==4.0.0
+channels-redis==4.2.0
+daphne==4.1.0
+ruff==0.8.4
 
